<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="2dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:padding="@dimen/_10sdp"

            android:text="@string/Title"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVidSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_gravity="left"
            app:layout_constraintTop_toBottomOf="@+id/tv_film_name"
            android:layout_weight="1"
            android:text="@string/SizeUnknown" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/txtVidSize">

            <Button
                android:id="@+id/btnPreview"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:paddingRight="2dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:drawableLeft="@drawable/ic_baseline_preview_24"
                android:drawablePadding="5sp"
                android:padding="5dp"
                android:text="@string/Preview" />


            <Button
                android:textColor="@color/white"
                android:layout_marginLeft="2dp"
                android:drawableTint="@color/white"
                android:id="@+id/btnDownload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:drawableLeft="@drawable/ic_download"
                android:drawablePadding="5sp"
                android:padding="5dp"
                android:text="@string/Download" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>