<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gl="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appsnipp.trendingapps.DetailsActivity"
    tools:showIn="@layout/app_bar_detail"
    android:layout_marginBottom="85dp"
    style="@style/parent.contentLayout"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/str_head"
                    android:id="@+id/txt_Service_Name"
                    android:background="@drawable/round"
                    style="@style/viewParent.headerText"
                    android:padding="10dp"
                    android:layout_gravity="bottom"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_Service_Logo"
                    android:src="@drawable/home_ic_roposo"
                    android:adjustViewBounds="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <android.inputmethodservice.ExtractEditText
                        android:layout_width="match_parent"
                        android:id="@+id/txtVideoURL"
                        android:hint="@string/str_txtUrlHint"
                        android:layout_height="wrap_content">

                    </android.inputmethodservice.ExtractEditText>


                    <com.github.nikartm.button.FitButton
                        android:id="@+id/fbBtn_Download"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_marginTop="20dp"
                        android:enabled="true"
                        android:gravity="center_vertical"
                        app:fb_cornerRadius="2dp"
                        app:fb_shape="rectangle"
                        app:fb_divColor="#fff"
                        app:fb_divWidth="1dp"
                        app:fb_divHeight="40dp"
                        app:fb_rippleColor="#FBE9E7"
                        app:fb_iconWidth="28dp"
                        app:fb_iconHeight="28dp"
                        app:fb_iconPosition="left"
                        app:fb_iconMarginStart="20dp"
                        app:fb_iconMarginEnd="16dp"
                        app:fb_icon="@drawable/ic_download_white"
                        app:fb_iconColor="#000000"
                        app:fb_textPaddingStart="16dp"
                        app:fb_textColor="#FFF"
                        app:fb_text="@string/str_Download"
                        app:fb_backgroundColor="#FF7043"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="History"
                >
            </TextView>

            <ListView
                android:id="@+id/fileslist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                ></ListView>


        </LinearLayout>





    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>